--- a/index.html
+++ b/index.html
@@ -29,88 +29,88 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper" style="height: 101vh;">
         <!-- Slides -->
-        <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/celedoni.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+        <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/celedoni.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
         <div class="info-tapa">
           <h2 class="bar-name">bar celedoni</h2>
           <h2 class="tapa-name">Rellom de porc</h2>
         </div>
       </div>
         <div class="swiper-slide">
-          <div class="video-container"><video style="z-index: 0;" src="../static/burguer.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+          <div class="video-container"><video style="z-index: 0;" src="../static/burguer.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
         <div class="info-tapa" style="background-color: #E84141;">
           <h2 class="bar-name">burguer infinity</h2>
           <h2 class="tapa-name">Rellom de porc</h2>
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="video-container"><video style="z-index: 0;" src="../static/mosset.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+        <div class="video-container"><video style="z-index: 0;" src="../static/mosset.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
       <div class="info-tapa" style="background-color: #FABA19;">
         <h2 class="bar-name">el mosset d'exequiel</h2>
         <h2 class="tapa-name">Rellom de porc</h2>
       </div>
     </div>
-    <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/alameda.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+    <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/alameda.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
         <div class="info-tapa">
           <h2 class="bar-name">la alameda</h2>
           <h2 class="tapa-name">Rellom de porc</h2>
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="video-container"><video style="z-index: 0;" src="../static/cantonada.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+        <div class="video-container"><video style="z-index: 0;" src="../static/cantonada.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
       <div class="info-tapa" style="background-color: #E84141;">
         <h2 class="bar-name">la cantonada</h2>
         <h2 class="tapa-name">Rellom de porc</h2>
       </div>
     </div>
     <div class="swiper-slide">
-      <div class="video-container"><video style="z-index: 0;" src="../static/masia.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+      <div class="video-container"><video style="z-index: 0;" src="../static/masia.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
     <div class="info-tapa" style="background-color: #FABA19;">
       <h2 class="bar-name">la masia</h2>
       <h2 class="tapa-name">Rellom de porc</h2>
     </div>
   </div>
-  <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/blp.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+  <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/blp.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
   <div class="info-tapa">
     <h2 class="bar-name">la plaça</h2>
     <h2 class="tapa-name">Rellom de porc</h2>
   </div>
 </div>
   <div class="swiper-slide">
-    <div class="video-container"><video style="z-index: 0;" src="../static/la_pollera.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+    <div class="video-container"><video style="z-index: 0;" src="../static/la_pollera.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
   <div class="info-tapa" style="background-color: #E84141;">
     <h2 class="bar-name">la pollera</h2>
     <h2 class="tapa-name">Rellom de porc</h2>
   </div>
 </div>
 <div class="swiper-slide">
-  <div class="video-container"><video style="z-index: 0;" src="../static/taska.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+  <div class="video-container"><video style="z-index: 0;" src="../static/taska.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
 <div class="info-tapa" style="background-color: #FABA19;">
   <h2 class="bar-name">la taska de sisco</h2>
   <h2 class="tapa-name">Rellom de porc</h2>
 </div>
 </div>
-<div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/paseo.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+<div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/paseo.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
   <div class="info-tapa">
     <h2 class="bar-name">lo paseo</h2>
     <h2 class="tapa-name">Rellom de porc</h2>
   </div>
 </div>
 <div class="swiper-slide">
-  <div class="video-container"><video style="z-index: 0;" src="../static/oco.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+  <div class="video-container"><video style="z-index: 0;" src="../static/oco.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
 <div class="info-tapa" style="background-color: #E84141;">
   <h2 class="bar-name">oco bar gastronòmic</h2>
   <h2 class="tapa-name">Rellom de porc</h2>
 </div>
 </div>
 <div class="swiper-slide">
-<div class="video-container"><video style="z-index: 0;" src="../static/dalias.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+<div class="video-container"><video style="z-index: 0;" src="../static/dalias.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
 <div class="info-tapa" style="background-color: #FABA19;">
 <h2 class="bar-name">taperia dalia's</h2>
 <h2 class="tapa-name">Rellom de porc</h2>
 </div>
 </div>
 <div class="swiper-slide">
-  <div class="video-container"><video style="z-index: 0;" src="../static/xocolat.mp4" autoplay="" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+  <div class="video-container"><video style="z-index: 0;" src="../static/xocolat.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
 <div class="info-tapa" style="background-color: #E84141;">
   <h2 class="bar-name">xocola't</h2>
   <h2 class="tapa-name">Rellom de porc</h2>
@@ -145,7 +145,7 @@
                             }
                         });
                     },
-                    { threshold: 0.2 }
+                    { threshold: 1 }
                 );
                 observer.observe(video);
             });
