--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper" style="height: 101vh;">
         <!-- Slides -->
-        <div class="swiper-slide"><div class="video-container"><picture height="250px" width="250px">
-          <source srcset="../static/celedoni.mp4" type="video/mp4">
-      </picture></div>
+        <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/celedoni.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
         <div class="info-tapa">
           <h2 class="bar-name">bar celedoni</h2>
           <h2 class="tapa-name">Rellom de porc</h2>
