--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper" style="height: 101vh;">
         <!-- Slides -->
-        <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/celedoni.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+        <div class="swiper-slide"><div class="video-container"><video style="z-index: 0;" src="../static/celedoni.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="220px"></video></div>
         <div class="info-tapa">
           <h2 class="bar-name">bar celedoni</h2>
           <h2 class="tapa-name">Rellom de porc</h2>
         </div>
       </div>
         <div class="swiper-slide">
-          <div class="video-container"><video style="z-index: 0;" src="../static/burguer.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+          <div class="video-container"><video style="z-index: 0;" src="../static/burguer.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="220px"></video></div>
         <div class="info-tapa" style="background-color: #E84141;">
           <h2 class="bar-name">burguer infinity</h2>
           <h2 class="tapa-name">Rellom de porc</h2>
         </div>
       </div>
       <div class="swiper-slide">
-        <div class="video-container"><video style="z-index: 0;" src="../static/mosset.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="250px"></video></div>
+        <div class="video-container"><video style="z-index: 0;" src="../static/mosset.mp4" autoplay="false" loop="" muted="muted" playsinline="" controlslist="nodownload" height="220px"></video></div>
       <div class="info-tapa" style="background-color: #FABA19;">
         <h2 class="bar-name">el mosset d'exequiel</h2>
         <h2 class="tapa-name">Rellom de porc</h2>
@@ -55,7 +55,8 @@
     </div>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
-      var swiper = new Swiper(".mySwiper", {loop: true});
+      var swiper = new Swiper(".mySwiper", {loop: true,
+        centeredSlides: true, slidesPerView: 1.05 });
       const video = document.querySelector("video");
 let playState = null;
 
