--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           id="my-video"
           class="video-js"
           autoplay
+          playsinline
+          muted
           loop
           preload="auto"
           height="220"
@@ -54,6 +56,8 @@
             id="my-video"
             class="video-js"
             autoplay
+            playsinline
+            muted
             loop
             preload="auto"
             height="220"
