--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           height="220"
           width="220"
           data-setup="{}"
+          style="z-index: 0"
         >
           <source src="https://72011.gvideo.io/videos/72011_KxIRPXtlZrE0K7B/master.m3u8" type="application/x-mpegURL" />
 
