--- a/index.html
+++ b/index.html
@@ -95,6 +95,71 @@
         <h2 class="tapa-name">Rellom de porc</h2>
       </div>
     </div>
+    <div class="swiper-slide"><div class="video-container"><video
+      id="my-video"
+      class="video-js"
+      autoplay
+      playsinline
+      muted
+      loop
+      preload="auto"
+      height="900"
+      width="900"
+      data-setup="{}"
+    >
+      <source src="https://72011.gvideo.io/videos/72011_ci4owT7peR53j442/master.m3u8" type="application/x-mpegURL" />
+
+  
+    </video></div>
+    <div class="info-tapa">
+      <h2 class="bar-name">la alameda</h2>
+      <h2 class="tapa-name">Rellom de porc</h2>
+    </div>
+  </div>
+    <div class="swiper-slide">
+      <div class="video-container"><video
+        id="my-video"
+        class="video-js"
+        autoplay
+        playsinline
+        muted
+        loop
+        preload="auto"
+        height="900"
+        width="900"
+        data-setup="{}"
+      >
+        <source src="https://72011.gvideo.io/videos/72011_DkdUBwZNax9N9Vy/master.m3u8" type="application/x-mpegURL" />
+
+    
+      </video></div>
+    <div class="info-tapa" style="background-color: #E84141;">
+      <h2 class="bar-name">la cantonada</h2>
+      <h2 class="tapa-name">Rellom de porc</h2>
+    </div>
+  </div>
+  <div class="swiper-slide">
+    <div class="video-container"><video
+      id="my-video"
+      class="video-js"
+      autoplay
+      playsinline
+      muted
+      loop
+      preload="auto"
+      height="900"
+      width="900"
+      data-setup="{}"
+    >
+      <source src="https://72011.gvideo.io/videos/72011_DzpnRRNthTmxM3t5/master.m3u8" type="application/x-mpegURL" />
+
+  
+    </video></div>
+  <div class="info-tapa" style="background-color: #FABA19;">
+    <h2 class="bar-name">la masia</h2>
+    <h2 class="tapa-name">Rellom de porc</h2>
+  </div>
+</div>
       </div>
     </div>
    
