--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   
     </video></div>
     <div class="info-tapa">
-      <h2 class="bar-name">la alameda</h2>
+      <h2 class="bar-name">la alameda2</h2>
       <h2 class="tapa-name">Rellom de porc</h2>
     </div>
   </div>
