--- a/index.html
+++ b/index.html
@@ -95,22 +95,7 @@
         <h2 class="tapa-name">Rellom de porc</h2>
       </div>
     </div>
-    <div class="swiper-slide"><div class="video-container"><video
-      id="my-video"
-      class="video-js"
-      autoplay
-      playsinline
-      muted
-      loop
-      preload="auto"
-      height="300"
-      width="300"
-      data-setup="{}"
-    >
-      <source src="https://72011.gvideo.io/videos/72011_ci4owT7peR53j442/index-svod480n-v1.m3u8" type="application/x-mpegURL" />
-
-  
-    </video></div>
+    <div class="swiper-slide"><div class="video-container"><iframe src="https://player.vimeo.com/video/688362706?h=68bf6ef97a&autoplay=1&loop=1&title=0&byline=0&portrait=0" width="300" height="300" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
     <div class="info-tapa">
       <h2 class="bar-name">la alameda2</h2>
       <h2 class="tapa-name">Rellom de porc</h2>
