--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ data-setup="{}"
                                   video.pause();
                               } else if (video.paused) {
                                   video.play();
+                                  console.log("video play")
                               }
                           });
                       },
