--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   
     </video></div>
-  <div class="info-tapa" style="background-color: #FABA19;">
+  <div class="info-tapa" style="background-color: #FABA19; color: #4D509D;">
     <h2 class="bar-name">la masia</h2>
     <h2 class="tapa-name">Creps de tonyina i surimi</h2>
   </div>
@@ -224,7 +224,7 @@
 
 
 </video></div>
-<div class="info-tapa" style="background-color: #FABA19;">
+<div class="info-tapa" style="background-color: #FABA19; color: #4D509D;">
 <h2 class="bar-name">la taska de sisco</h2>
 <h2 class="tapa-name">Filopollo Paticorto</h2>
 </div>
@@ -289,7 +289,7 @@ data-setup="{}"
 
 
 </video></div>
-<div class="info-tapa" style="background-color: #FABA19;">
+<div class="info-tapa" style="background-color: #FABA19; color: #4D509D;">
 <h2 class="bar-name">taperia dalia's</h2>
 <h2 class="tapa-name">La pulled de l’hort</h2>
 </div>
@@ -314,6 +314,7 @@ data-setup="{}"
   <div class="info-tapa" style="background-color: #E84141;">
   <h2 class="bar-name">xocola't</h2>
   <h2 class="tapa-name">Fried burguer</h2>
+  <p class="tapa-description">Hamburguesa de tonyina macerada amb alls tendres, maionesa cítrica i escuma d’oli mil·lenari.</p>
   </div>
   </div>
       </div>
