--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           data-setup="{}"
           
         >
-          <source src="https://72011.gvideo.io/videos/72011_MDtZxSVRdFBaud/index-svod480n-v1.m3u8" type="application/x-mpegURL" />
+          <source src="../static/542871_1968744.mp4" type="video/mp4" />
       
         </video></div>
         <div class="info-tapa">
