--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
         <h2 class="bar-name">el mosset d'exequiel</h2>
         <h2 class="tapa-name">Cielito Lindo</h2>
         <p class="tapa-description"><em>Nacho</em> artesanal amb tomaca, ceba morada, coriandre i llima, gratinat amb mozzarella, cheddar i guacamole casolà.</p>
+        <div class="toggle-container">
+          <div class="toggle" onclick="toggle('ingredients-mosset')">
+            <span class="toggle-icon-closed ingredients-mosset-closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(110.3 0) rotate(90)" fill="#4d509d"></path></svg></span>
+            <span class="toggle-icon-opened ingredients-mosset-open closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg></span>
+            <a class="toggle-title">Ingredients</a>
+            <div class="toggle-content closed" id="ingredients-mosset"><p>Farina, tomaca, ceba morada, coriandre, llima, sal, mozzarela, formatge cheddar i guacamole.</p></div>
+          </div>
+          <div class="toggle" onclick="toggle('alergens-mosset')">
+            <span class="toggle-icon-closed alergens-mosset-closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(110.3 0) rotate(90)" fill="#4d509d"></path></svg></span>
+            <span class="toggle-icon-opened alergens-mosset-open closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg></span>
+            <a class="toggle-title">Alérgens</a>
+            <div class="toggle-content closed" id="alergens-mosset"><p>Lactosa i gluten.</p></div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="swiper-slide"><div class="video-container"><video
@@ -362,6 +376,16 @@ data-setup="{}"
           playPauseVideo();
 };
     </script>
+    <script>
+      function toggle(id) {
+        var element = document.getElementById(id);
+        var icon = document.getElementsByClassName(id+"-closed");
+        var icon2 = document.getElementsByClassName(id+"-open");
+        icon[0].classList.toggle("closed");
+        icon2[0].classList.toggle("closed");
+      element.classList.toggle("closed");
+}
+      </script>
 
   </body>
 </html>
