--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@ data-setup="{}"
     </div>
    
     </div>
+    <div style="min-height: 50px; background-color: #f0dfc3;"></div>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> 
     <script src="https://vjs.zencdn.net/7.18.1/video.min.js"></script>
      
