--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="info-tapa" style="background-color: #E84141;">
           <h2 class="bar-name">burguer infinity</h2>
           <h2 class="tapa-name">Cuixa de pollastre</h2>
-          <p class="tapa-description">Cuixa de pollastre cruixent amb salsa blanca</p>
+          <p class="tapa-description">amb salsa blanca</p>
         </div>
       </div>
       <div class="swiper-slide">
@@ -306,6 +306,21 @@ data-setup="{}"
 <div class="info-tapa" style="background-color: #FABA19; color: #4D509D;">
 <h2 class="bar-name">taperia dalia's</h2>
 <h2 class="tapa-name">La pulled de l’hort</h2>
+<p class="tapa-description">Hamburguesa de carn de porc amb salsa barbacoa i un toc de cheddar, acompanyada d’albergínia de l’hort fregida amb mel i pipes.</p>
+<div class="toggle-container">
+  <div class="toggle" onclick="toggle('ingredients-dalias')">
+    <span class="toggle-icon-closed ingredients-dalias-closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(110.3 0) rotate(90)" fill="#4d509d"></path></svg></span>
+    <span class="toggle-icon-opened ingredients-dalias-open closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg></span>
+    <a class="toggle-title">Ingredients</a>
+    <div class="toggle-content closed" id="ingredients-dalias"><p>Carn de porc, enciam, salsa barbacoa, salsa cheddar, albergínia, mel, pipes i pa de vidre.</p></div>
+  </div>
+  <div class="toggle" onclick="toggle('alergens-dalias')">
+    <span class="toggle-icon-closed alergens-dalias-closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(110.3 0) rotate(90)" fill="#4d509d"></path></svg></span>
+    <span class="toggle-icon-opened alergens-dalias-open closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg></span>
+    <a class="toggle-title">Alérgens</a>
+    <div class="toggle-content closed" id="alergens-dalias"><p>Lactosa, gluten i fruits secs.</p></div>
+  </div>
+</div>
 </div>
 </div>
 <div class="swiper-slide">
@@ -329,6 +344,20 @@ data-setup="{}"
   <h2 class="bar-name">xocola't</h2>
   <h2 class="tapa-name">Fried burguer</h2>
   <p class="tapa-description">Hamburguesa de tonyina macerada amb alls tendres, maionesa cítrica i escuma d’oli mil·lenari.</p>
+  <div class="toggle-container">
+    <div class="toggle" onclick="toggle('ingredients-xocolat')">
+      <span class="toggle-icon-closed ingredients-xocolat-closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(110.3 0) rotate(90)" fill="#ffffff"></path></svg></span>
+      <span class="toggle-icon-opened ingredients-xocolat-open closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#ffffff"></path></svg></span>
+      <a class="toggle-title">Ingredients</a>
+      <div class="toggle-content closed" id="ingredients-xocolat"><p>Pa, oli d’oliva, maionesa, llima, tonyina, all tendre, oli d’oliva, lecitina de soja i soja.</p></div>
+    </div>
+    <div class="toggle" onclick="toggle('alergens-xocolat')">
+      <span class="toggle-icon-closed alergens-xocolat-closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" transform="translate(110.3 0) rotate(90)" fill="#ffffff"></path></svg></span>
+      <span class="toggle-icon-opened alergens-xocolat-open closed"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#ffffff"></path></svg></span>
+      <a class="toggle-title">Alérgens</a>
+      <div class="toggle-content closed" id="alergens-xocolat"><p>Lactosa i gluten.</p></div>
+    </div>
+  </div>
   </div>
   </div>
       </div>
