--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <link rel="manifest" href="manifest.json" />
+<!-- ios support -->
+<link rel="apple-touch-icon" href="../static/icons/icon-72x72.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-96x96.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-128x128.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-144x144.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-152x152.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-192x192.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-384x384.png" />
+<link rel="apple-touch-icon" href="../static/icons/icon-512x512.png" />
+<meta name="apple-mobile-web-app-status-bar" content="#f0dfc3" />
+<meta name="theme-color" content="#f0dfc3" />
+    <title>Va De Tapes</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
