--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="manifest" href="manifest.json" />
-<!-- ios support -->
-<link rel="apple-touch-icon" href="../static/icons/icon-72x72.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-96x96.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-128x128.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-144x144.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-152x152.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-192x192.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-384x384.png" />
-<link rel="apple-touch-icon" href="../static/icons/icon-512x512.png" />
-<meta name="apple-mobile-web-app-status-bar" content="#f0dfc3" />
-<meta name="theme-color" content="#f0dfc3" />
     <title>Va De Tapes</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- ios support -->
+<link rel="icon" href="../static/icons/icon-192x192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="../static/icons/icon-180x180.png" />
+<meta name="apple-mobile-web-app-status-bar" content="#f0dfc3" />
+<meta name="theme-color" content="#f0dfc3" />
     <link href="https://vjs.zencdn.net/7.18.1/video-js.css" rel="stylesheet" />
 
     <link
