--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="swiper mySwiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper" style="height: 101vh;">
+      <div class="swiper-wrapper" style="height: 694px;">
         <!-- Slides -->
         <div class="swiper-slide"><div class="video-container"><video
           id="my-video"
@@ -497,7 +497,11 @@ data-setup="{}"
     </div>
    
     </div>
-    <div style="min-height: 50px; background-color: #f0dfc3;"></div>
+    <div class="footer">
+    <div class="logo-footer"><img src="../static/logo_cultiu.svg"></div>
+    <div class="logo-footer"><img src="../static/logo_ajuntament.svg"></div>
+    <div class="logo-footer"><img src="../static/logo_turisme.svg"></div>
+    </div>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> 
     <script src="https://vjs.zencdn.net/7.18.1/video.min.js"></script>
     <script>function playPauseVideo() {
