--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Va De Tapes</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="stylesheet" href="styles.css" />
     <!-- ios support -->
 <link rel="icon" href="../static/icons/icon-192x192.png" sizes="192x192">
