--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
         align-items: center;
         width: 50px;"><div class="hamburger" id="hamburger"></div></a></div>
     </div>
-    <div class="popup" id="popup"><img src="../static/logo_vadetapes.svg" style="height: 200px;"><div class="popup-content"><p class="popup-title">TAPA + QUINTO / VI / AIGUA</p><p>4 €</p>
-      <p class="popup-title">ELS DIVENDRES D'ABRIL</p><p>4 €</p>
-      <p class="popup-title">HORARI</p><p>4 €</p>
+    <div class="popup" id="popup"><img src="../static/logo_vadetapes.svg" style="height: 170px;
+      padding-bottom: 25px;"><div class="popup-content"><p class="popup-title">TAPA + QUINTO / VI / AIGUA</p><div class="popup-info">4 €</div>
+      <p class="popup-title">ELS DIVENDRES D'ABRIL</p><div class="popup-info">1 <svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3" style="padding: 3px; height: 10px;
+        width: 10px;"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg> 8 <svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3" style="padding: 3px; height: 10px;
+        width: 10px;"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg> 22</div>
+      <p class="popup-title">HORARI</p><div class="popup-info">18.30 <svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3" style="padding: 3px; height: 10px;
+        width: 10px;"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#4d509d"></path></svg> 21.00h</div>
     </div></div>
     <div class="swiper mySwiper">
       <!-- Additional required wrapper -->
