--- a/index.html
+++ b/index.html
@@ -532,7 +532,9 @@ data-setup="{}"
    
     </div>
     <div class="footer">
-    <div class="logo-footer"><img src="../static/logo_cultiu.svg"></div>
+    <div class="logo-footer"><p style="
+      padding-bottom: 1px;
+  ">Creat per</p><img src="../static/logo_cultiu.svg"></div>
     <div class="logo-footer"><img src="../static/logo_ajuntament.svg"></div>
     <div class="logo-footer"><img src="../static/logo_turisme.svg"></div>
     </div>
