--- a/index.html
+++ b/index.html
@@ -122,7 +122,21 @@
               </div>
             </div>
             </div>
-          <div class="swiper-slide second-slide-info"><h2 class="intro-head">LO "POSTUREO" TÉ PREMI</h2><div class="slide-2-info"></div><button href="#">Bases del concurs</button><div>
+          <div class="swiper-slide second-slide-info"><h2 class="intro-head" style="margin-bottom: 25px !important;">LO "POSTUREO" TÉ PREMI</h2><div class="slide-2-info"><div class="slide-2-text"><img src="../static/logo_instagram.svg" style="padding-bottom: 8px;"><p class="intro-text" style="text-align: left!important; font-size: 13px!important;">Concurs d'Instagram a la història més divertida!</p><p class="intro-text" style="text-align: left!important; font-size: 13px!important;">Hi haurà un photocall a la Plaça de l'esglèsia per a poder fer-se fotos.</p><svg
+            xmlns="http://www.w3.org/2000/svg"
+            id="Capa_1"
+            data-name="Capa 1"
+            width="38.91mm"
+            height="38.91mm"
+            viewBox="0 0 110.3 110.3"
+            style="padding: 3px 0; height: 10px; width: 10px"
+          >
+            <path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#e84141"></path>
+          </svg>
+          <p class="popup-title" style="text-align: left!important; font-family: Barracuda; font-size: 15px!important; padding-top: 9px!important;">Premi</p>
+          <p class="intro-text" style="text-align: left!important; margin-bottom: 2px!important; font-size: 18px!important; color: #e84141!important;">200€</p>
+          <p class="intro-text" style="text-align: left!important; font-size: 13px!important; margin-bottom: 18px!important;">a bescanviar al comerç local.</p>
+        </div><div class="slide-2-image"><img style="height: 250px !important;"  src="../static/ilus_tapes2.svg"></div></div><a target="_blank" href="../static/pdf/bases.pdf"><button >Bases del concurs</button></a><div>
           </div></div>
         </div>
         <div class="swiper-pagination swiper-try"></div>
