--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <p class="popup-title" style="text-align: left!important; font-family: Barracuda; font-size: 15px!important; padding-top: 9px!important;">Premi</p>
           <p class="intro-text" style="text-align: left!important; margin-bottom: 2px!important; font-size: 18px!important; color: #e84141!important;">200€</p>
           <p class="intro-text" style="text-align: left!important; font-size: 13px!important; margin-bottom: 18px!important;">a bescanviar al comerç local.</p>
-        </div><div class="slide-2-image"><img style="height: 250px !important;"  src="../static/ilus_tapes2.svg"></div></div><a target="_blank" href="../static/pdf/bases.pdf"><button >Bases del concurs</button></a><div>
+        </div><div class="slide-2-image"><img style="height: 250px !important;"  src="../static/ilus_tapes2.svg"></div></div><a target="_blank" href="https://test.vadetapes.com/pdf/bases.pdf"><button >Bases del concurs</button></a><div>
           </div></div>
         </div>
         <div class="swiper-pagination swiper-try"></div>
