--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 <link href="../static/splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 <meta name="apple-mobile-web-app-status-bar" content="#f0dfc3" />
 <meta name="theme-color" content="#f0dfc3" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T3EG6K2SJG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T3EG6K2SJG');
+</script>
     <link href="https://vjs.zencdn.net/7.18.1/video-js.css" rel="stylesheet" />
 
     <link
