--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <!-- Slides -->
           <div class="swiper-slide first-slide">
             <img class="img-slider-1"  src="../static/ilus_tapes.svg">
-          <div class="intro-content"><h2 class="intro-head">DESTAPA LES GANES!</h2><p class="intro-text">Bona companyia, aires primaverals i delicioses tapes <em>made in Ulldecona</em> són els ingredients perfectes per sortir amb ganes de menjarte (literalment) lo poble.</p></div></div>
+          <div class="intro-content"><h2 class="intro-head">DESTAPA LES GANES!</h2><p class="intro-text">Bona companyia, aires primaverals i delicioses tapes <em>made in Ulldecona</em> són els ingredients perfectes per sortir amb ganes de menjar-te (literalment) lo poble.</p></div></div>
           <div class="swiper-slide third-slide"><img class="img-slider-3"  src="../static/ilus_tapes1.svg"><div class="intro-content"><h2 class="intro-head">#ULLVADETAPES22</h2><p class="intro-text">Descobreix-ho tot sobre les tapes d'Ulldecona a continuació.</p><button onclick="continuar()">Destapa!</button></div></div>
           </div>
         </div>
@@ -391,7 +391,8 @@
     <div class="toggle">
       <span class="toggle-icon-opened"><svg xmlns="http://www.w3.org/2000/svg" id="Capa_1" data-name="Capa 1" width="38.91mm" height="38.91mm" viewBox="0 0 110.3 110.3"><path d="M0,0H0A110.3,110.3,0,0,1,110.3,110.3v0a0,0,0,0,1,0,0H0a0,0,0,0,1,0,0V0A0,0,0,0,1,0,0Z" fill="#ffffff"></path></svg></span>
       <a class="toggle-title">Al·lèrgens</a>
-      <div class="toggle-content"><p>Lactosa, gluten i fruits secs.</p></div>
+      <div class="toggle-content"><p>Lactosa, gluten i fruits secs.</p>
+        <p style="font-size: 12px; "><em>*Podem adaptar la tapa sense al·lèrgens amb reserva prèvia.</em></p></div>
     </div>
   </div>
 </div>
