--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Va De Tapes</title>
-    <meta name="description" content="" />
+    <title>Ulldecona Va De Tapes</title>
+    <meta name="description" content="Bona companyia, aires primaverals i delicioses tapes made in Ulldecona." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="stylesheet" href="styles.css" />
